# Drakar

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp
src/app/tui/: TuiApp.cpp  TuiApp.h  TuiState.h  TuiTheme.h
src/app/tui/screens/: AgeScreen.cpp  AgeScreen.h  AppearanceScreen.cpp  AppearanceScreen.h  BPLevelScreen.cpp  BPLevelScreen.h  DashboardScreen.cpp  DashboardScreen.h  DiceScreen.cpp  DiceScreen.h  NameScreen.cpp  NameScreen.h  ProfessionScreen.cpp  ProfessionScreen.h  RaceScreen.cpp  RaceScreen.h  SettingsScreen.cpp  SettingsScreen.h  SkillsScreen.cpp  SkillsScreen.h  StatsScreen.cpp  StatsScreen.h  StoScreen.cpp  StoScreen.h  SummaryScreen.cpp  SummaryScreen.h  SynHorselScreen.cpp  SynHorselScreen.h
src/core/: CMakeLists.txt
src/core/include/core/: Character.h  CharacterSerializer.h  Dice.h  GameData.h  GameRules.h  SkillId.h
src/core/src/: CharacterSerializer.cpp  Dice.cpp  GameData.cpp  GameRules.cpp
tests/: CMakeLists.txt  test_dice.cpp  test_gamedata.cpp  test_gamerules.cpp  test_serializer.cpp
